Added testcases for validity.

--- a/elements/oe-feel-boxed-invocation-setting.html
+++ b/elements/oe-feel-boxed-invocation-setting.html
@@ -21,8 +21,7 @@
             is:"oe-feel-boxed-invocation-setting",
             properties: {
                 data: {
-                    type: Object,
-                    observer: '_dataChanged'
+                    type: Object
                 },
                 targetList:{
                     type:Array,
