Added missing copyright comments

--- a/elements/oe-feel-business-model-setting.html
+++ b/elements/oe-feel-business-model-setting.html
@@ -1,3 +1,7 @@
+<!-- 
+  ©2017-2018 EdgeVerve Systems Limited (a fully owned Infosys subsidiary),
+  Bangalore, India. All Rights Reserved.
+-->
 <link rel="import" href="oe-feel-decision-table-setting.html">
 <link rel="import" href="oe-feel-boxed-context-setting.html">
 <dom-module id="oe-feel-business-model-setting">
