--- a/elements/oe-feel-boxed-context-setting.html
+++ b/elements/oe-feel-boxed-context-setting.html
@@ -1,3 +1,7 @@
+<!-- 
+  ©2017-2018 EdgeVerve Systems Limited (a fully owned Infosys subsidiary),
+  Bangalore, India. All Rights Reserved.
+-->
 <link rel="import" href="oe-feel-decision-table-setting.html">
 <link rel="import" href="oe-feel-parameter-list.html">
 <link rel="import" href="../../oe-input/oe-textarea.html">
