--- a/elements/oe-feel-boxed-invocation-setting.html
+++ b/elements/oe-feel-boxed-invocation-setting.html
@@ -1,3 +1,7 @@
+<!-- 
+  ©2017-2018 EdgeVerve Systems Limited (a fully owned Infosys subsidiary),
+  Bangalore, India. All Rights Reserved.
+-->
 <link rel="import" href="oe-feel-parameter-list.html">
 <dom-module id="oe-feel-boxed-invocation-setting">
     <template>
