--- a/elements/oe-feel-parameter-list.html
+++ b/elements/oe-feel-parameter-list.html
@@ -1,3 +1,7 @@
+<!-- 
+  ©2017-2018 EdgeVerve Systems Limited (a fully owned Infosys subsidiary),
+  Bangalore, India. All Rights Reserved.
+-->
 <link rel="import" href="../../oe-input/oe-input.html">
 <link rel="import" href="../../paper-button/paper-button.html">
 <link rel="import" href="../../iron-icon/iron-icon.html">
